Bug 370982 - BorderlessMaximizedWindows settings only work on x11 or xwayland windows
Summary: BorderlessMaximizedWindows settings only work on x11 or xwayland windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.8.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D3508
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-17 03:13 UTC by Guillaume Racicot
Modified: 2016-11-29 11:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guillaume Racicot 2016-10-17 03:13:19 UTC
There's a setting in kwin named 'BorderlessMaximizedWindows' that hides decoration for maximized windows. Unfortunately, it only work on x11 or xwayland window.


Reproducible: Always

Steps to Reproduce:
1. activate the setting BorderlessMaximizedWindows to true
2. Open a wayland session
3. Maximize a wayland window and a xwayland window

Actual Results:  
The wayland window still have decorations

Expected Results:  
The decoration should be hidden, just like the x11 window
Comment 1 Martin Flöser 2016-10-17 05:53:54 UTC
Most likely related to the other maximize bugs like:
 * bug #366632
 * bug #368393
 * bug #368545
Comment 2 Martin Flöser 2016-11-25 15:48:27 UTC
Patch at: https://phabricator.kde.org/D3508
Comment 3 Martin Flöser 2016-11-29 11:36:47 UTC
Git commit f32e6550311f3b7e4927442f8c1aa45855f6e306 by Martin Gräßlin.
Committed on 29/11/2016 at 11:36.
Pushed by graesslin into branch 'master'.

Implement borderlessMaximizedWindows for Wayland windows

Summary:
Maximize code was not yet adjusted to support decorations. Code is as
much as possible similar to the X11 Client implementation.

Test Plan: Added auto test and run a nested KWin/Wayland with the setting enabled

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D3508

M  +55   -0    autotests/integration/maximize_test.cpp
M  +7    -1    shell_client.cpp

https://commits.kde.org/kwin/f32e6550311f3b7e4927442f8c1aa45855f6e306